<resources>
    <string name="app_name">IgClone</string>
    <string name="username">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">LOGOUT</string>
    <string name="profile_picture">profile picture</string>
    <string name="kylexy">kylexy</string>
    <string name="imagepost">imagePost</string>
    <string name="like_icon">like icon</string>
    <string name="comment_icon">comment icon</string>
    <string name="shareicon">shareIcon</string>
    <string name="save_icon">save icon</string>
    <string name="kylex">kylexy</string>
    <string name="this_is_the_caption">This is the caption...</string>
    <string name="_0likes">0Likes</string>
    <string name="_0comments">0Comments</string>
</resources>